--- a/index.ipynb
+++ b/index.ipynb
@@ -54,20 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-1-af52cdbe1067>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-af52cdbe1067>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    travel_month = '\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "travel_month = 'January'"
+    "travel_month = 'January'\n"
    ]
   },
   {
